[RPP] Fix the annotation colors in dark mode

--- a/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
+++ b/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
@@ -12,13 +12,13 @@
   transform: translate(-50%);
   display: flex;
   flex-direction: column;
-  color: var(--color-selected-option);
   align-items: center;
 }
 
 .label-box {
+  background-color: var(--color-background-inverted);
+  color: var(--color-background);
   pointer-events: auto;
-  background-color: var(--sys-color-token-variable);
   border-radius: var(--sys-shape-corner-extra-small);
   white-space: nowrap;
   padding: var(--sys-size-3) var(--sys-size-4);
@@ -28,8 +28,15 @@
 }
 
 .label-box:focus {
-  background-color: var(--color-selected-option);
-  color: var(--sys-color-token-variable);
+  background-color: var(--color-background);
+  color: var(--color-background-inverted);
+  /* Doesn't work */
+  border-color: 1px solid red;
+}
+
+.label-box:focus-visible {
+  /* Doesn't work */
+  border-color: 1px solid green;
 }
 
 .connectorContainer {
